--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 :root {
     --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
+    --cinza-secundario: #e60000;
+    --botao-azul: #000300c
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
-    --botao-azul-hover: #3c92fa;
+    --botao-azul-hover: #eeff03;
 }
 
 body {
